--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-three-fiber": "^6.0.13",
+    "sass": "^1.32.8",
+    "three": "^0.127.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
